--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -151,10 +151,18 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nia-SO-jQo">
+                                <rect key="frame" x="8" y="621" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="YfH-xb-SI3" firstAttribute="top" secondItem="Nia-SO-jQo" secondAttribute="bottom" constant="6" id="11N-l0-GlT"/>
                             <constraint firstItem="YfH-xb-SI3" firstAttribute="top" secondItem="v1A-km-S0O" secondAttribute="bottom" constant="30" id="26p-Jg-eIq"/>
+                            <constraint firstItem="Nia-SO-jQo" firstAttribute="leading" secondItem="2DA-VX-izu" secondAttribute="leading" constant="8" id="Cji-TT-A6I"/>
                             <constraint firstAttribute="trailing" secondItem="v1A-km-S0O" secondAttribute="trailing" id="G3B-d3-vnp"/>
                             <constraint firstItem="KqW-Ty-df9" firstAttribute="leading" secondItem="2DA-VX-izu" secondAttribute="leading" id="Mbd-Qc-jSk"/>
                             <constraint firstAttribute="trailing" secondItem="KqW-Ty-df9" secondAttribute="trailing" id="NxR-Hf-tIZ"/>
@@ -174,6 +182,7 @@
                         <outlet property="messageTxtBox" destination="YfH-xb-SI3" id="5lT-ve-kwk"/>
                         <outlet property="sendBtn" destination="nhB-UO-v3c" id="gkz-dr-zAw"/>
                         <outlet property="tableView" destination="v1A-km-S0O" id="bRL-5y-InR"/>
+                        <outlet property="typingUsersLbl" destination="Nia-SO-jQo" id="6le-1g-SkN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SX5-Fs-ltX" userLabel="First Responder" sceneMemberID="firstResponder"/>
