--- a/Smack/XIBs/AddChannelVC.xib
+++ b/Smack/XIBs/AddChannelVC.xib
@@ -46,6 +46,9 @@
                                     <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Channel name text field"/>
+                                    </userDefinedRuntimeAttributes>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkj-UP-in7">
                                     <rect key="frame" x="0.0" y="34" width="250" height="2"/>
@@ -63,6 +66,9 @@
                                     <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Channel description text field"/>
+                                    </userDefinedRuntimeAttributes>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8kC-3a-fhh">
                                     <rect key="frame" x="0.0" y="84" width="250" height="2"/>
@@ -81,6 +87,9 @@
                                 <constraint firstAttribute="width" constant="30" id="icz-vM-VR4"/>
                             </constraints>
                             <state key="normal" image="closeButton"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Close button "/>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="closeModalPressed:" destination="-1" eventType="touchUpInside" id="1qt-MD-uab"/>
                             </connections>
@@ -100,6 +109,7 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Create channel button"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="createChannelPressed:" destination="-1" eventType="touchUpInside" id="kEZ-Xu-sLp"/>
